@@ -18,7 +18,9 @@ package com.lwohvye.core.utils;
 import cn.hutool.core.util.ReflectUtil;
 import com.lwohvye.core.annotation.Query;
 import com.lwohvye.core.exception.UtilsException;
+import com.lwohvye.core.extension.AnyExtensionMethod;
 import jakarta.persistence.criteria.*;
+import lombok.experimental.ExtensionMethod;
 import lombok.experimental.UtilityClass;
 import lombok.extern.slf4j.Slf4j;
 import org.jetbrains.annotations.NotNull;
@@ -36,6 +38,7 @@ import java.util.Objects;
  */
 @Slf4j
 @UtilityClass
+@ExtensionMethod({AnyExtensionMethod.class})
 // @SuppressWarnings 抑制警告 https://www.lwohvye.com/2021/12/05/suppresswarnings%e6%b3%a8%e8%a7%a3%e7%94%a8%e6%b3%95/
 // @SuppressWarnings({"unchecked", "rawtypes", "unused"})
 public class QueryHelp {
@@ -91,7 +94,7 @@ public class QueryHelp {
                     continue;
                 }
                 // 模糊多字段
-                if (StringUtils.isNotBlank(blurry)) {
+                if (!blurry.isBlank()) {
                     var blurrys = blurry.split(",");
                     var orPredicate = new ArrayList<Predicate>();
                     for (String s : blurrys) {
@@ -121,7 +124,7 @@ public class QueryHelp {
     private static <R> Join<R, ?> analyzeJoinType(Root<R> root, Query q, Object value) {
         Join<R, ?> join = null;
         var joinName = q.joinName();
-        if (StringUtils.isBlank(joinName))
+        if (joinName.isBlank())
             return null;
         // 首先获取已经设置的join。只用一次的话，使用聚合会降低性能，所以再次调整为循环的方式
         // var existJoinNames = root.getJoins().stream().collect(Collectors.toMap(rJoin -> rJoin.getAttribute().getName(), rJoin -> rJoin, (o, o2) -> o2)); 只用一次，聚合不划算
@@ -176,7 +179,7 @@ public class QueryHelp {
         var attributeName = defineAttrName(field, q);
         var value = field.get(query);
         var fieldType = field.getType();
-        var comparableFieldType = castComparableFieldType(value);
+        var comparableFieldType = value.castComparableFieldType();
         var join = analyzeJoinType(root, q, value);
 
         // switch 的 -> 语法也只是语法糖
@@ -190,12 +193,12 @@ public class QueryHelp {
                 //pt2：list.add(cb.greaterThanOrEqualTo(getExpression(attributeName, join, root).as(Comparable.class), ele));  Comparable无法转为Hibernate type，不得行
                 //pt3：list.add(cb.greaterThanOrEqualTo(getExpression(attributeName, join, root).as(comparableFieldType), comparableFieldType.cast(ele))); 当不采用C的方式定义时，这样也是不得行的
                     list.add(cb.greaterThanOrEqualTo(getExpression(attributeName, join, root).as(comparableFieldType),
-                            Objects.requireNonNull(comparableFieldType, ExceptionMsgUtils.genUnComparableExcMsg(attributeName)).cast(value)));
+                            value.castToComparable(attributeName, comparableFieldType)));
             case LESS_THAN ->
                     list.add(cb.lessThanOrEqualTo(getExpression(attributeName, join, root).as(comparableFieldType),
-                            Objects.requireNonNull(comparableFieldType, ExceptionMsgUtils.genUnComparableExcMsg(attributeName)).cast(value)));
+                            value.castToComparable(attributeName, comparableFieldType)));
             case LESS_THAN_NQ -> list.add(cb.lessThan(getExpression(attributeName, join, root).as(comparableFieldType),
-                    Objects.requireNonNull(comparableFieldType, ExceptionMsgUtils.genUnComparableExcMsg(attributeName)).cast(value)));
+                    value.castToComparable(attributeName, comparableFieldType)));
             case INNER_LIKE ->
                     list.add(cb.like(getExpression(attributeName, join, root).as(String.class), "%" + value + "%"));
             case LEFT_LIKE -> list.add(cb.like(getExpression(attributeName, join, root).as(String.class), "%" + value));
@@ -228,9 +231,9 @@ public class QueryHelp {
             }
             case BETWEEN -> {
                 if (value instanceof List<?> col && col.size() == 2 && col.get(0) instanceof Comparable<?> start && col.get(1) instanceof Comparable<?> end) {
-                    var eleType = castComparableFieldType(start);
+                    var eleType = start.castComparableFieldType();
                     list.add(cb.between(getExpression(attributeName, join, root).as(eleType),
-                            Objects.requireNonNull(eleType, ExceptionMsgUtils.genUnComparableExcMsg(attributeName)).cast(start), eleType.cast(end)));
+                            start.castToComparable(attributeName, eleType), eleType.cast(end)));
                 }
             }
             case NOT_NULL -> list.add(cb.isNotNull(getExpression(attributeName, join, root)));
@@ -303,51 +306,8 @@ public class QueryHelp {
     @NotNull
     private static String defineAttrName(Field field, Query q) {
         var propName = q.propName();
-        return StringUtils.isNotBlank(propName) ? propName : field.getName();
+        return !propName.isBlank() ? propName : field.getName();
     }
-
-    /**
-     * 构建一个Comparable Type 的 fieldType，跟fieldType一样或者为null（这里返回null是因为如果不是Comparable，那些比较类的Query是无法invoke的）
-     * 这个参数只是为了解决几个警告，因为fieldType不一定extends Comparable，所以加了这个，来限定需要能够比较才行。
-     * 因为cb.lessThan,greaterThan,between的返回值 <Y extends Comparable<? super Y>>， 入参 （Expression<? extends Y> var1, Y var2, Y var3），含义:类型 Y 必须实现 Comparable 接口，并且这个接口的类型是 Y 或 Y 的任一父类
-     * https://www.lwohvye.com/2021/12/04/t%e3%80%81-super-t%e3%80%81-extends-t/
-     *
-     * @param value /
-     * @return java.lang.Class
-     * @date 2022/9/17 5:21 PM
-     */
-    @Nullable
-    // private static <C> Class<? extends Comparable<? super C>> castComparableFieldType(Object val) 因为C 未指定，所以实际上是Object，? super Object只能是Object，所以干脆就用Object了
-    // 2022/9/17 总感觉这里是不对的，`? extends Comparable<Object>` 和 `? extends Comparable<? super Y>` 的含义是不一样的，
-    //  Any Class implements Comparable<Object> 与 Any Class implements Comparable & the type of this interface is Y or Y's parent，but 这当前业务中，Y是没办法被define的
-    //  明明应该用后者，但前者这种编译能通过，运行也不报错，但总感觉哪里不对，泛型还需进一步的学习(显然跟泛型擦除有关, 因为采用了类型擦除，泛型类型只在静态类型检查时期存在，在这之后，程序中所有的泛型类型都会被擦除，并替换为它们的非泛型上界)
-    //  疑问是 String implements Comparable<String>, Timestamp extends Date (Date implements Comparable<Date>) 与 XXX implements Comparable<Object> 区别与相似之处
-    // 2022/9/18 结合字节码，Comparable<T> 中的 compareTo方法，依旧是compareTo(Object obj)，这样上面的疑问便解决了:他们实际上是一样的，只是内部有的有转型
-    /*
-    // class version 62.0 (62)
-    // access flags 0x601
-    // signature <T:Ljava/lang/Object;>Ljava/lang/Object;
-    // declaration: java/lang/Comparable<T>
-    public abstract interface java/lang/Comparable {
-
-    // compiled from: Comparable.java
-
-    // access flags 0x401
-    // signature (TT;)I
-    // declaration: int compareTo(T)
-    public abstract compareTo(Ljava/lang/Object;)I
-    }
-     */
-    @SuppressWarnings("unchecked")
-    private static Class<? extends Comparable<Object>> castComparableFieldType(Object value) {
-        return value instanceof Comparable<?> cec ? (Class<? extends Comparable<Object>>) cec.getClass() : null;
-    }
-
-    /* 在此记录几种行不通的方案，以防后续忘记再次做重复的尝试
-    private static <Y extends Comparable<? super Y>> Class<? extends Y> castComparableFieldType(Object val) {} // 基于调用的方式，build时可能报错，并且这个Y感觉没办法define
-    private static <Y extends Comparable<? super Y>> Class<? extends Y> castComparableFieldType(Object val, Class<Y> yClass) {} // 当前业务中yClass是没法define的，且还有泛型上的限制，最重要的，如果yClass明了，这方法没调用的必要了
-    private static <Y> Class<Y extends Comparable<? super Y>> castComparableFieldType(Object val) {} // 直接语法错误 Unexpected bound
-    */
 
     // 2021/11/6 使用JPA 2.1 引入的 CriteriaUpdate 和 CriteriaDelete 进行批量更新/删除。不是很实用，期待后续的使用场景
     public static <R, Q> void criteria4Update(Root<R> root, Q query, CriteriaBuilder cb) {
